# app/Filament/Resources/Forms/Pages/ListForms.php
@@ -1,0 +1,21 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Filament\Resources\Forms\Pages;
+
+use App\Filament\Resources\Forms\FormResource;
+use Filament\Actions\CreateAction;
+use Filament\Resources\Pages\ListRecords;
+
+class ListForms extends ListRecords
+{
+    protected static string $resource = FormResource::class;
+
+    protected function getHeaderActions(): array
+    {
+        return [
+            CreateAction::make(),
+        ];
+    }
+}
